[gd_scene load_steps=13 format=3 uid="uid://6ihbxeh3d764"]

[ext_resource type="Script" path="res://Scripts/sininepäkapikk.gd" id="1_img23"]
[ext_resource type="Texture2D" uid="uid://dix6nslsh1s7n" path="res://assets/elf/elf_blue_pinch1.png" id="2_nfw5m"]
[ext_resource type="Texture2D" uid="uid://de3neyinqjpmv" path="res://assets/elf/elf_blue_pinch2.png" id="3_b2ytk"]
[ext_resource type="Texture2D" uid="uid://bmueh253lm7h4" path="res://assets/elf/elf_blue_pinch3.png" id="4_y8ar5"]
[ext_resource type="Texture2D" uid="uid://r8ki8o1cjtrg" path="res://assets/elf/elf_blue_walk1.png" id="5_xou12"]
[ext_resource type="Texture2D" uid="uid://bvwcupvifwqru" path="res://assets/elf/elf_blue_walk2.png" id="6_epu80"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_676gm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hmp0x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b2jgb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_761iu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8a7us"]

[sub_resource type="SpriteFrames" id="SpriteFrames_om46m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nfw5m")
}, {
"duration": 1.0,
"texture": ExtResource("3_b2ytk")
}, {
"duration": 1.0,
"texture": ExtResource("4_y8ar5")
}],
"loop": true,
"name": &"Pinch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xou12")
}, {
"duration": 1.0,
"texture": ExtResource("6_epu80")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="sininepäkapikk" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_img23")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 88.0
offset_bottom = 123.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_676gm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hmp0x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b2jgb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_761iu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8a7us")
flat = true
expand_icon = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(46.18, 48)
scale = Vector2(3.86118, 2.46667)
sprite_frames = SubResource("SpriteFrames_om46m")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
